// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Popover component should render and close Popover based on button or any element with role=button click and match snapshot 1`] = `
<DocumentFragment>
  <mock-styled.div>
    <button
      aria-expanded="true"
      aria-haspopup="true"
      role="button"
    >
      Trigger
    </button>
    <mock-styled.div
      data-open="true"
      role="menu"
    >
      <div>
        Popover Content
      </div>
      <button
        type="button"
      >
        Close with button
      </button>
      <div
        role="button"
      >
        Close with div
      </div>
    </mock-styled.div>
  </mock-styled.div>
</DocumentFragment>
`;

exports[`Menu Popover component should render and close Popover based on button or any element with role=button click and match snapshot 2`] = `
<DocumentFragment>
  <mock-styled.div>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      role="button"
    >
      Trigger
    </button>
  </mock-styled.div>
</DocumentFragment>
`;
